--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
     "router": "^1.3.8",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
@@ -43,7 +42,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "react-scripts": "^5.0.1"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
